unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Advisor_Confidence__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Advisor_Confidence__c</fullName>
    <description>Nivel de confianza del COMEXI Retrofit Advisor en la recomendación de retrofit. Refuerza la narrativa de que el agente no solo propone, sino que cuantifica su certeza.</description>
    <label>Confianza del Advisor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>