unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Advisor_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Advisor_Run_Date__c</fullName>
    <description>Fecha y hora en que el COMEXI Retrofit Advisor generó el análisis que dio lugar a esta oportunidad.</description>
    <label>Fecha de análisis del Advisor</label>
    <type>DateTime</type>
</CustomField>