unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si el deal necesita aprobación por margen: se activa cuando el margen de la oferta cae por debajo del objetivo del producto. Enlaza el retrofit con el proceso de aprobación de la escena 08.</description>
    <inlineHelpText>Se marca cuando el margen cae por debajo del objetivo y requiere aprobación.</inlineHelpText>
    <label>Requiere aprobación</label>
    <type>Checkbox</type>
</CustomField>