unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Down_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Status__c</fullName>
    <description>Estado del anticipo a nivel de este deal. El porcentaje maestro vive en la cuenta; aquí se sigue el estado, porque la ingeniería no arranca hasta que el anticipo está cobrado (D6/D13).</description>
    <inlineHelpText>Estado del cobro del anticipo de este retrofit.</inlineHelpText>
    <label>Estado del anticipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Exencion autorizada</fullName>
                <label>Exención autorizada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>