unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Intervention_Weeks__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Weeks__c</fullName>
    <description>Semanas estimadas hasta poder ejecutar la intervención en planta. El discovery sitúa el planificador de intervenciones en hasta 6 semanas.</description>
    <inlineHelpText>Semanas estimadas hasta la intervención en planta.</inlineHelpText>
    <label>Plazo de intervención (semanas)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>