unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Machine_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Age_Years__c</fullName>
    <description>Antigüedad en años de la máquina objetivo, calculada desde el año de instalación del Asset. En el discovery la antigüedad multiplica el coste de la intervención (x3/x4 en máquinas muy antiguas) y condiciona la viabilidad del retrofit.</description>
    <formula>IF(ISBLANK(COMEXI_Target_Asset__r.COMEXI_Install_Year__c), NULL, YEAR(TODAY()) - COMEXI_Target_Asset__r.COMEXI_Install_Year__c)</formula>
    <label>Antigüedad de la máquina (años)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>