unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Machine_Model__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Model__c</fullName>
    <description>Modelo de la máquina objetivo, traído del Asset. Evita reteclear el modelo y mantiene el dato sincronizado con la máquina instalada.</description>
    <formula>IF(ISBLANK(COMEXI_Target_Asset__r.COMEXI_Machine_Model__c), &apos;&apos;, COMEXI_Target_Asset__r.COMEXI_Machine_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo de máquina</label>
    <type>Text</type>
</CustomField>