unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Needs_Engineering__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Needs_Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si este retrofit necesita ingeniería. Por defecto false, alineado con el discovery (el 80% de los retrofits no la necesita). Permite que el vendedor cotice directo cuando no hay que escalar a ingeniería.</description>
    <inlineHelpText>Marca si el retrofit requiere intervención de ingeniería.</inlineHelpText>
    <label>Necesita ingeniería</label>
    <type>Checkbox</type>
</CustomField>