unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Obsolete_Component__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Obsolete_Component__c</fullName>
    <description>Componente de la máquina que ha quedado obsoleto y motiva el retrofit. En el caso 174535 es el PC industrial con Windows 10 fuera de soporte (MSC000600-PC).</description>
    <inlineHelpText>Componente obsoleto que justifica el retrofit.</inlineHelpText>
    <label>Componente obsoleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>