unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Planned_Intervention_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Planned_Intervention_Date__c</fullName>
    <description>Fecha prevista de la intervención en planta, distinta de la fecha de cierre comercial (CloseDate). Se coordina con la ventana de parada de la línea del cliente.</description>
    <inlineHelpText>Fecha prevista de la intervención en la planta del cliente.</inlineHelpText>
    <label>Fecha prevista de intervención</label>
    <type>Date</type>
</CustomField>