unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Quote_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Quote_Margin_Pct__c</fullName>
    <description>Margen combinado de la oferta asociada, copiado desde Quote.COMEXI_Blended_Margin_Pct__c. En el caso 174535 baja al 27,54% tras el 5% de descuento, lo que dispara la aprobación por margen de la escena 08.</description>
    <label>Margen de la oferta</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>