unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Quote_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Quote_Total_Cost__c</fullName>
    <description>Coste total de la oferta asociada, copiado desde Quote.COMEXI_Total_Cost__c en el momento de generarla. Snapshot que permite ver el escandallo a nivel de deal sin abrir la oferta.</description>
    <label>Coste total de la oferta</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>