unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Recommended_SKU__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Recommended_SKU__c</fullName>
    <description>Código del retrofit recomendado por el Advisor antes de configurar las líneas de la oferta (en el caso 174535, T100). Es la intención de producto del pipeline; el detalle configurable vive en la oferta.</description>
    <inlineHelpText>SKU del retrofit recomendado (p. ej. T100).</inlineHelpText>
    <label>SKU recomendado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>