unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Retrofit_Type__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_Type__c</fullName>
    <description>Tipología del retrofit según las etiquetas que usa COMEXI: CTEC (cambio tecnológico), RET_OBS (obsolescencia), RET_NEW_FEATURES (nuevas funciones), RET_NEW_DESIGNS (nuevos diseños), RET_MAINT (mantenimiento). Permite reporting de pipeline por tipo de retrofit.</description>
    <inlineHelpText>Naturaleza del retrofit según las etiquetas de COMEXI.</inlineHelpText>
    <label>Tipo de retrofit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTEC</fullName>
                <label>CTEC - Cambio tecnológico</label>
            </value>
            <value>
                <fullName>RET_OBS</fullName>
                <label>RET_OBS - Obsolescencia</label>
            </value>
            <value>
                <fullName>RET_NEW_FEATURES</fullName>
                <label>RET_NEW_FEATURES - Nuevas funciones</label>
            </value>
            <value>
                <fullName>RET_NEW_DESIGNS</fullName>
                <label>RET_NEW_DESIGNS - Nuevos diseños</label>
            </value>
            <value>
                <fullName>RET_MAINT</fullName>
                <label>RET_MAINT - Mantenimiento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>