unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Source_Case__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso de servicio que origina la oportunidad de retrofit. La escena 03 del guion pide que la oportunidad no pierda el vinculo con el caso, y Opportunity no trae ningun campo estandar hacia Case.</description>
    <inlineHelpText>Caso desde el que se genero esta oportunidad de retrofit.</inlineHelpText>
    <label>Caso de origen</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Oportunidades de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>