unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Target_Asset__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Máquina instalada (Asset) sobre la que se ejecuta el retrofit. Salesforce no trae ningún lookup estándar de Opportunity a Asset, así que sin este campo la oportunidad no sabe sobre qué máquina va el deal. El caso 174535 apunta a MSC000600 (Comexi Proslit S2 DS).</description>
    <inlineHelpText>Máquina instalada objeto de este retrofit.</inlineHelpText>
    <label>Máquina objetivo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Oportunidades de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>