unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Validated_By__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Validated_By__c</fullName>
    <description>Quién validó la viabilidad del retrofit. En la demo lo rellena el COMEXI Retrofit Advisor (Agentforce); en producción sería el ingeniero o el rol que asuma el filtro técnico.</description>
    <inlineHelpText>Responsable de validar la viabilidad del retrofit.</inlineHelpText>
    <label>Validado por</label>
    <length>120</length>
    <type>Text</type>
</CustomField>