unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Viability_Rationale__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Viability_Rationale__c</fullName>
    <description>Explicación auditable del veredicto de viabilidad: la traza que deja el COMEXI Retrofit Advisor al analizar el caso (componente obsoleto, antigüedad, encaje del retrofit y riesgos).</description>
    <label>Justificación de viabilidad</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>