unpackaged/post_comexi/objects/Opportunity/fields/COMEXI_Viability_Status__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Viability_Status__c</fullName>
    <description>Veredicto de viabilidad técnica del retrofit antes de cotizar. Materializa el filtro de ingeniería del discovery (D2: hoy el 100% de los retrofits pasa por tres personas aunque el 80% no necesite ingeniería).</description>
    <inlineHelpText>Resultado del preestudio de viabilidad del retrofit.</inlineHelpText>
    <label>Estado de viabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viable sin ingenieria</fullName>
                <label>Viable sin ingeniería</label>
            </value>
            <value>
                <fullName>Viable con ingenieria</fullName>
                <label>Viable con ingeniería</label>
            </value>
            <value>
                <fullName>Requiere estudio tecnico</fullName>
                <label>Requiere estudio técnico</label>
            </value>
            <value>
                <fullName>No viable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>