unpackaged/post_comexi/objects/Opportunity/recordTypes/COMEXI_Comercial.recordType-meta.xml
<RecordType>
    <fullName>COMEXI_Comercial</fullName>
    <active>true</active>
    <businessProcess>COMEXI_Sales_Process</businessProcess>
    <description>Oportunidad de venta de máquina nueva (PLM).</description>
    <label>Comercial</label>
</RecordType>