unpackaged/post_comexi/objects/Opportunity/recordTypes/COMEXI_Retrofitting.recordType-meta.xml
<RecordType>
    <fullName>COMEXI_Retrofitting</fullName>
    <active>true</active>
    <businessProcess>COMEXI_Sales_Process</businessProcess>
    <description>Oportunidad de retrofit sobre máquina instalada. Tipo protagonista de la demo.</description>
    <label>Retrofitting</label>
</RecordType>