unpackaged/post_comexi/objects/Opportunity/recordTypes/COMEXI_Servicio.recordType-meta.xml
<RecordType>
    <fullName>COMEXI_Servicio</fullName>
    <active>true</active>
    <businessProcess>COMEXI_Sales_Process</businessProcess>
    <description>Oportunidad de servicio (packs gold/silver).</description>
    <label>Servicio</label>
</RecordType>